[gd_scene load_steps=12 format=4 uid="uid://cjrv4cok8382"]

[ext_resource type="Script" path="res://Game/Levels/Level 3/level3Script.gd" id="1_0surk"]
[ext_resource type="Texture2D" uid="uid://bot6aryi0ybpw" path="res://Game/Levels/Level 1/1.png" id="2_rjdaa"]
[ext_resource type="Texture2D" uid="uid://cf0mtqki23qw2" path="res://Game/Levels/Level 1/IndustrialTile_81-0.png" id="3_0yy34"]
[ext_resource type="Texture2D" uid="uid://dmly0jh2qxtu8" path="res://Game/Levels/Level 1/Ladder2-0.png" id="4_1a57c"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_23t5a"]
texture = ExtResource("3_0yy34")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0

[sub_resource type="TileSet" id="TileSet_kf6an"]
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 3
sources/0 = SubResource("TileSetAtlasSource_23t5a")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7rfi2"]
texture = ExtResource("4_1a57c")
0:0/0 = 0
1:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
16:5/0 = 0
17:5/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
12:7/0 = 0
13:7/0 = 0

[sub_resource type="TileSet" id="TileSet_pb4tp"]
sources/0 = SubResource("TileSetAtlasSource_7rfi2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0bt8h"]
size = Vector2(262.5, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fxrvk"]
size = Vector2(26, 358)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtilf"]
size = Vector2(286, 234)

[node name="Level3" type="Node"]
script = ExtResource("1_0surk")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 539)
scale = Vector2(3.33333, 3.31482)
texture = ExtResource("2_rjdaa")

[node name="TileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAEEAAAAAAAQAAAAAAEIAAAAAAAUAAAABAEEAAAABAAQAAAABAEIAAAABAAUAAAACAEEAAAAAAAQAAAACAEIAAAAAAAUAAAADAEEAAAABAAQAAAADAEIAAAABAAUAAAAEAEEAAAAAAAQAAAAEAEIAAAAAAAUAAAAFAEEAAAABAAQAAAAFAEIAAAABAAUAAAAGAEEAAAAAAAQAAAAGAEIAAAAAAAUAAAAHAEEAAAABAAQAAAAHAEIAAAABAAUAAAAIAEEAAAAAAAQAAAAIAEIAAAAAAAUAAAAJAEEAAAABAAQAAAAJAEIAAAABAAUAAAAKAEEAAAAAAAQAAAAKAEIAAAAAAAUAAAALAEEAAAABAAQAAAALAEIAAAABAAUAAAAMAEEAAAAAAAQAAAAMAEIAAAAAAAUAAAANAEEAAAABAAQAAAANAEIAAAABAAUAAAAOAEEAAAAAAAQAAAAOAEIAAAAAAAUAAAAPAEEAAAABAAQAAAAPAEIAAAABAAUAAAAAADsAAAAAAAUAAAABADsAAAABAAUAAAACADsAAAAAAAUAAAADADsAAAABAAUAAAAEADsAAAAAAAUAAAAFADsAAAABAAUAAAAGADsAAAAAAAUAAAAHADsAAAABAAUAAAAIADsAAAAAAAUAAAAJADsAAAABAAUAAAAKADsAAAAAAAUAAAALADsAAAABAAUAAAAMADsAAAAAAAUAAAANADsAAAABAAUAAAAOADsAAAAAAAUAAAAPADsAAAABAAUAAAAAADoAAAAAAAQAAAABADoAAAABAAQAAAACADoAAAAAAAQAAAADADoAAAABAAQAAAAEADoAAAAAAAQAAAAFADoAAAABAAQAAAAGADoAAAAAAAQAAAAHADoAAAABAAQAAAAIADoAAAAAAAQAAAAJADoAAAABAAQAAAAKADoAAAAAAAQAAAALADoAAAABAAQAAAAMADoAAAAAAAQAAAANADoAAAABAAQAAAAOADoAAAAAAAQAAAAPADoAAAABAAQAAAAOADwAAAAAAAQAAAAOAD0AAAAAAAUAAAAPADwAAAABAAQAAAAPAD0AAAABAAUAAAAQADwAAAAAAAQAAAAQAD0AAAAAAAUAAAARADwAAAABAAQAAAARAD0AAAABAAUAAAASADwAAAAAAAQAAAASAD0AAAAAAAUAAAATADwAAAABAAQAAAATAD0AAAABAAUAAAAQAEEAAAAAAAQAAAAQAEIAAAAAAAUAAAARAEEAAAABAAQAAAARAEIAAAABAAUAAAASAEEAAAAAAAQAAAASAEIAAAAAAAUAAAATAEEAAAABAAQAAAATAEIAAAABAAUAAAAUAEEAAAAAAAQAAAAUAEIAAAAAAAUAAAAVAEEAAAABAAQAAAAVAEIAAAABAAUAAAAWAEEAAAAAAAQAAAAWAEIAAAAAAAUAAAAXAEEAAAABAAQAAAAXAEIAAAABAAUAAAAYAEEAAAAAAAQAAAAYAEIAAAAAAAUAAAAZAEEAAAABAAQAAAAZAEIAAAABAAUAAAAaAEEAAAAAAAQAAAAaAEIAAAAAAAUAAAAbAEEAAAABAAQAAAAbAEIAAAABAAUAAAAcAEEAAAAAAAQAAAAcAEIAAAAAAAUAAAAdAEEAAAABAAQAAAAdAEIAAAABAAUAAAAeAEEAAAAAAAQAAAAeAEIAAAAAAAUAAAAfAEEAAAABAAQAAAAfAEIAAAABAAUAAAAUADwAAAAAAAQAAAAUAD0AAAAAAAUAAAAVADwAAAABAAQAAAAVAD0AAAABAAUAAAAWADwAAAAAAAQAAAAWAD0AAAAAAAUAAAAXADwAAAABAAQAAAAXAD0AAAABAAUAAAAYADwAAAAAAAQAAAAYAD0AAAAAAAUAAAAZADwAAAABAAQAAAAZAD0AAAABAAUAAAAaADwAAAAAAAQAAAAaAD0AAAAAAAUAAAAbADwAAAABAAQAAAAbAD0AAAABAAUAAAAcADwAAAAAAAQAAAAcAD0AAAAAAAUAAAAdADwAAAABAAQAAAAdAD0AAAABAAUAAAAeADwAAAAAAAQAAAAeAD0AAAAAAAUAAAAfADwAAAABAAQAAAAfAD0AAAABAAUAAAAgADwAAAAAAAQAAAAgAD0AAAAAAAUAAAAhADwAAAABAAQAAAAhAD0AAAABAAUAAAAgAEEAAAAAAAQAAAAgAEIAAAAAAAUAAAAhAEEAAAABAAQAAAAhAEIAAAABAAUAAAA=")
tile_set = SubResource("TileSet_kf6an")

[node name="TileMap2" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_pb4tp")

[node name="CompletePlayerSpawnPoint" type="Marker2D" parent="."]
position = Vector2(48, 1008)

[node name="Ceiling" type="Area2D" parent="."]

[node name="DefaultCeiling" type="CollisionShape2D" parent="Ceiling"]
position = Vector2(-195.25, 46.5)
shape = SubResource("RectangleShape2D_0bt8h")
debug_color = Color(0.337255, 0.427451, 0.862745, 0.419608)

[node name="Ladder" type="Area2D" parent="."]

[node name="DefaultLadder" type="CollisionShape2D" parent="Ladder"]
position = Vector2(-203, 296)
shape = SubResource("RectangleShape2D_fxrvk")

[node name="DeathZone" type="Area2D" parent="."]

[node name="DefaultDeathZone" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(-184, 634)
shape = SubResource("RectangleShape2D_dtilf")
debug_color = Color(0.776471, 0.407843, 0.435294, 0.419608)

[connection signal="body_entered" from="Ceiling" to="." method="_on_ceiling_body_entered"]
[connection signal="body_exited" from="Ceiling" to="." method="_on_ceiling_body_exited"]
[connection signal="body_entered" from="Ladder" to="." method="_on_ladder_body_entered"]
[connection signal="body_exited" from="Ladder" to="." method="_on_ladder_body_exited"]
[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
[connection signal="body_exited" from="DeathZone" to="." method="_on_death_zone_body_exited"]
